log window: fix log wrapping

--- a/src/app/style/logwindow.css
+++ b/src/app/style/logwindow.css
@@ -19,3 +19,7 @@
 .react-select > div {
     margin: -1px;
 }
+
+samp {
+    white-space: pre;
+}
